$Id: ChangeLog,v 1.293 2006/01/11 08:33:48 hwmaier Exp $

2006-01-11 Henrik Maier  <henrik@proconx.com>

        * include/arch/avr/gcc.h: Support for avr-libc >= 1.4.x

        * app/httpd/httpserv.c: Added explicit type casts to silence
        a few avr-gcc 3.4.3 warning messages.

        * arch/avr/dev/nicctrl.c: Changes to make receiver thread's stack
        size configurable and honour the NUT_THREAD_NICRXSTACK configuration
        setting.


2006-01-08  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nutdoc_en.txt, doc/gen/nutfoot.html, os/version.c:
	Version information changed.


2006-01-06  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nutdoc_en.txt: Version information changed.

	* nut/pro/httpd.c: NutHttpURLEncode() no longer encodes
	everything that isn't alphanumeric. See RFC2396. Thanks
	to Lloyd Bailey for this update.


2006-01-05  Harald Kipp  <harald.kipp@egnite.de>

	* fs/phat12.c, fs/phat16.c, fs/phat32.c, fs/phatdbg.c,
	fs/phatdir.c, fs/phatfs.c, fs/phatio.c, fs/phatutil.c,
	fs/phatvol.c, include/fs/phat12.h, include/fs/phat16.h,
	include/fs/phat32.h, include/fs/phatdbg.h, include/fs/phatdir.h,
	include/fs/phatfs.h, include/fs/phatio.h, include/fs/phatutil.h,
	include/fs/phatvol.h, conf/fs/fs.nut: PHAT file system driver
	added. This is a FAT12/16/32 compatible file system with read
	and write access. The code is in alpha stage.

	* crt/fmode.c: Files opened with mode 'a' or 'w' will be
	created, if they didn't exist. Files opened with 'w' will be
	truncated, if they exist.

	* fs/dirent.c, include/dirent.h, fs/pnutfs.c, fs/uromfs.c:
	The NUTFILE structure is now dynamically allocated. This
	change is required to seperate the file system from the
	block device driver code.

	* include/fs/uromfs.h: Changed the type of the size and file
	position values in the directory entry from u_short to u_int
	in order to better support 32 bit targets.

	* fs/pathops.c, fs/pnutfs.c: The argument for the FS_STATUS