@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.293 2006/01/11 08:33:48 hwmaier Exp $
+$Id: ChangeLog,v 1.294 2006/01/11 16:34:44 freckle Exp $
+
+2006-01-11  Matthias Ringwald  <mringwal@inf.ethz.ch>
+        * arch/avr/dev/adc.c: ADCInit can be called multiple times
 
 2006-01-11 Henrik Maier  <henrik@proconx.com>
 
